--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -118,3 +118,16 @@ h1,h2,h3,h4,h5,h6{
     margin-top: 15px;
     min-width: 100%;
 }
+
+.civanoglu-label {
+    @apply uppercase text-sm text-gray-600 mb-2 cursor-pointer block
+}
+
+.civanoglu-input {
+    @apply border border-gray-400 w-full px-4 py-2 block
+}
+
+.required-text {
+    @apply text-red-500;
+    font-family: sans-serif;
+}
